v1 s Please enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -1,12 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="js/rds.js"></script>
+    <link rel="stylesheet" href="../RDSI/Css/estilos.css">
+    <link rel="stylesheet" href="../RDSI/Css/bootstrap.min.css">
 </head>
+
 <body>
-    <h1>Hola Mundo</h1>
+    <!-- onload="iniciar()" -->
+
+    <div class="container w-75 bg-primary mt-1 rounded shadow">
+        <div class="row align-items-stretch">
+            <div class="col bg d-none d-lg-block col-md-5 col-lg-5 col-xl-6">
+
+            </div>
+            <div class="col bg-white p-2 rounded-end">  <!-- FORMULARIO  -->
+                <div class="text-end">
+                    <img src="../RDSI/Imagenes/lagarto.png" width="65" alt="">
+                </div>
+
+                <h2 class="fw-bold text-center py-2">Henrylowsoni</h2>
+
+                <!--  LOGIN  -->
+
+                <form action="#">
+                    <div class="mb-3">
+                        <label for="email" class="form-label"> Correo Electronico </label>
+                        <input type="email" class="form-control" name="email">
+                    </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label"> Password </label>
+                        <input type="password" class="form-control" name="password">
+                    </div>
+                    <div class="mb-4 form-check">
+                        <input type="checkbox" name="connected" class="form-check-input" id="">
+                        <label for="connected" class="form-check-label"> Mantenerme Conectado </label>
+                    </div>
+
+                    <div class="d-grid">
+                        <button type="submit" class="btn btn-primary"> Iniciar Sesión </button>
+                    </div>
+
+                    <div class="my-3">
+                        <span>No Tienes Cuenta? <a href="#"> Registrate </a></span> <br>
+                        <span> Olvido Su Contraseña? <a href="#"> Recuperar Password </a></span>
+                    </div>
+                </form>
+
+                <!-- LOGIN CON REDES SOCIALES -->
+
+                <div class="container w-100 my-5">
+                    <div class="row text-center">
+                        <div class="col-12">
+                            Iniciar Sesión
+                        </div>
+                    <div class="row">
+                        <div class="col">
+                            <button class="btn btn-outline-primary w-100 my-1">
+                                <div class="row align-items-center">
+                                    <div class="col-2 d-none d-md-block">
+                                        <img src="../RDSI/Imagenes/facebook.png" width="32" alt="">
+                                    </div>
+                                    <div class="col-10 text-center">
+                                        Facebook
+                                    </div>
+                                </div>
+                            </button>
+                        </div>
+                        <div class="col">
+                            <button class="btn btn-outline-danger w-100 my-1">
+                                <div class="row align-items-center">
+                                    <div class="col-2 d-none d-md-block">
+                                        <img src="../RDSI/Imagenes/google.png" width="32" alt="">
+                                    </div>
+                                    <div class="col-12 col-md-10 text-center">
+                                        Googleee
+                                    </div>
+                                </div>
+                            </button>
+                        </div>
+                    </div>                        
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+   
+
 </body>
+
 </html>
