--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </div>
 
                     <div class="my-3">
-                        <span>No Tienes Cuenta? <a href="#"> Registrate </a></span> <br>
+                        <span>No Tienes Cuenta? <a href="registro.html"> Registrate </a></span> <br>
                         <span> Olvido Su Contraseña? <a href="#"> Recuperar Password </a></span>
                     </div>
                 </form>
