--- a/registro.html
+++ b/registro.html
@@ -46,33 +46,26 @@
                         <input type="password" class="form-control" id="" placeholder="Repita Contraseña">
                       </div>
                     <div class="col-12">
-                      <label for="inputAddress" class="form-label">Address</label>
-                      <input type="text" class="form-control" id="" placeholder="1234 Main St">
-                    </div>
-                    <div class="col-12">
-                      <label for="inputAddress2" class="form-label">Address 2</label>
-                      <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+                      <label for="inputAddress" class="form-label">Correo Electronico</label>
+                      <input type="email" class="form-control" id="" placeholder="1234 Main St">
                     </div>
                     <div class="col-md-6">
-                      <label for="inputCity" class="form-label">City</label>
-                      <input type="text" class="form-control" id="inputCity">
+                      <label for="inputCity" class="form-label">Ciudad</label>
+                      <input type="text" class="form-control" id="">
                     </div>
                     <div class="col-md-4">
-                      <label for="inputState" class="form-label">State</label>
+                      <label for="inputState" class="form-label">Tipo Usuario</label>
                       <select id="inputState" class="form-select">
-                        <option selected>Choose...</option>
-                        <option>...</option>
+                        <option selected>Super Administrador</option>
+                        <option>Administrador</option>
+                        <option>Usuario</option>
                       </select>
-                    </div>
-                    <div class="col-md-2">
-                      <label for="inputZip" class="form-label">Zip</label>
-                      <input type="text" class="form-control" id="inputZip">
                     </div>
                     <div class="col-12">
                       <div class="form-check">
                         <input class="form-check-input" type="checkbox" id="gridCheck">
                         <label class="form-check-label" for="gridCheck">
-                          Check me out
+                          Confirmar Solicitud
                         </label>
                       </div>
                     </div>
